<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tourguideapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_activity_background"
        android:alpha="0.5"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageViewInMainActivity"
                    android:id="@+id/places_icon"
                    android:src="@drawable/places" />

                <TextView
                    style="@style/TextViewInMainActivity"
                    android:text="@string/places"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageViewInMainActivity"
                    android:id="@+id/dining_icon"
                    android:src="@drawable/restaurant" />

                <TextView
                    style="@style/TextViewInMainActivity"
                    android:text="@string/dining"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageViewInMainActivity"
                    android:id="@+id/stay_icon"
                    android:src="@drawable/hotel" />

                <TextView
                    style="@style/TextViewInMainActivity"
                    android:text="@string/stay"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    style="@style/ImageViewInMainActivity"
                    android:id="@+id/trips_icon"
                    android:src="@drawable/trips" />

                <TextView
                    style="@style/TextViewInMainActivity"
                    android:text="@string/trips"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
